fix home collapse

--- a/resources/application/app/components/base/fonts/Icon/style.css
+++ b/resources/application/app/components/base/fonts/Icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?955fgg');
-  src:  url('fonts/icomoon.eot?955fgg#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?955fgg') format('truetype'),
-    url('fonts/icomoon.woff?955fgg') format('woff'),
-    url('fonts/icomoon.svg?955fgg#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?m7vprn');
+  src:  url('fonts/icomoon.eot?m7vprn#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?m7vprn') format('truetype'),
+    url('fonts/icomoon.woff?m7vprn') format('woff'),
+    url('fonts/icomoon.svg?m7vprn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -13,7 +13,7 @@
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  speak: none;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -25,6 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-Polygon-1:before {
+  content: "\e904";
+  color: #56bfbd;
+}
 .icon-btn-blog-appstore:before {
   content: "\e903";
 }
